--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -5,14 +5,17 @@
         "is_override" : false,
         "ads_loading_text": "Ads will loading...",
         "default_ads": "startapp_ads",
-        "final_default_ads":"applovin_ads",
+        "final_default_ads":"unity_ads",
         "is_banner_ads": true,
         "is_interstitial_ads": true,
         "is_stream_player_banner_ads": true,
         "facebook_ads": {
-          "ads_app_id": "353151288785830",
-          "banner_ad_unit_id": "353151288785830_353151742119118",
-          "interstitial_ad_unit_id": "353151288785830_353152322119060",
+          "ads_app_id_ios": "353151288785830",
+          "ads_app_id_android": "353151288785830",
+          "banner_ad_unit_id_ios": "353151288785830_353151742119118",
+          "banner_ad_unit_id_android": "353151288785830_353151742119118",
+          "interstitial_ad_unit_id_ios": "353151288785830_353152322119060",
+          "interstitial_ad_unit_id_android": "353151288785830_353152322119060",
           "is_ads": false,
           "is_banner_ads": false,
           "is_interstitial_ads": false,
@@ -20,11 +23,12 @@
           "visibility_percentage": 0
         },
         "google_ads": {
-          "ads_app_id": "ca-app-pub-5004393487171509~6685526148",
-          "banner_ad_unit_id": "ca-app-pub-5004393487171509/9283769324",
-          "banner_ad_unit_id1": "ca-app-pub-3940256099942544/6300978111",
-          "interstitial_ad_unit_id": "ca-app-pub-5004393487171509/1417598032",
-          "interstitial_ad_unit_id1": "ca-app-pub-3940256099942544/1033173712",
+          "ads_app_id_ios": "ca-app-pub-3940256099942544~1458002511",
+          "ads_app_id_android": "ca-app-pub-3940256099942544~3347511713",
+          "banner_ad_unit_id_ios": "ca-app-pub-3940256099942544/2934735716",
+          "banner_ad_unit_id_android": "ca-app-pub-3940256099942544/6300978111",
+          "interstitial_ad_unit_id_ios": "ca-app-pub-3940256099942544/4411468910",
+          "interstitial_ad_unit_id_android": "ca-app-pub-3940256099942544/1033173712",
           "is_ads": false,
           "is_banner_ads": false,
           "is_interstitial_ads": false,
@@ -34,9 +38,12 @@
         "unity_ads": {
           "is_debug_mode": false,
           "is_test_mode": false,
-          "ads_app_id": "3073039",
-          "banner_ad_unit_id": "banner",
-          "interstitial_ad_unit_id": "interstitial",
+          "ads_app_id_ios": "3073039",
+          "ads_app_id_android": "3073039",
+          "banner_ad_unit_id_ios": "banner",
+          "banner_ad_unit_id_android": "banner",
+          "interstitial_ad_unit_id_ios": "interstitial",
+          "interstitial_ad_unit_id_android": "interstitial",
           "is_ads": true,
           "is_banner_ads": true,
           "is_interstitial_ads": true,
@@ -44,8 +51,20 @@
           "visibility_percentage": 100
         },
         "startapp_ads": {
-          "ads_app_id": "201571398",
-          "ads_app_id1": "211764508",
+          "ads_app_id_ios": "201571398",
+          "ads_app_id_android": "211764508",
+          "is_ads": true,
+          "is_banner_ads": true,
+          "is_interstitial_ads": true,
+          "is_initially_ads_container_visible":true,
+          "visibility_percentage": 5
+        },
+        "custom_ads": {
+          "ads_title": "Title",
+          "ads_description": "This is Description",
+          "ads_icon": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf8KNtmyuncAepg8FJ-LicJY3gW-MQtJ_NtD375W8maURgQoWBxQ&s",
+          "ads_app_id_android": "211764508",
+          "ads_redirect_url" : "https://play.google.com/store/apps/details?id=com.pocketiptv",
           "is_ads": true,
           "is_banner_ads": true,
           "is_interstitial_ads": true,
