--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -19,7 +19,11 @@
           "is_banner_ads": false,
           "is_interstitial_ads": false,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 0
+          "visibility_percentage": 0,
+          "is_illegal_interstitial_ads": false,
+          "is_legal_interstitial_ads": true,
+          "is_illegal_banner_ads": false,
+          "is_legal_banner_ads": true
         },
         "google_ads": {
           "ads_app_id_ios": "ca-app-pub-3940256099942544~1458002511",
@@ -32,7 +36,11 @@
           "is_banner_ads": false,
           "is_interstitial_ads": false,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 0
+          "visibility_percentage": 0,
+          "is_illegal_interstitial_ads": false,
+          "is_legal_interstitial_ads": true,
+          "is_illegal_banner_ads": false,
+          "is_legal_banner_ads": true
         },
         "unity_ads": {
           "is_debug_mode": false,
@@ -47,7 +55,11 @@
           "is_banner_ads": true,
           "is_interstitial_ads": true,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 100
+          "visibility_percentage": 100,
+          "is_illegal_interstitial_ads": false,
+          "is_legal_interstitial_ads": true,
+          "is_illegal_banner_ads": false,
+          "is_legal_banner_ads": true
         },
         "startapp_ads": {
           "ads_app_id_ios": "201571398",
@@ -56,7 +68,11 @@
           "is_banner_ads": true,
           "is_interstitial_ads": true,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 5
+          "visibility_percentage": 5,
+          "is_illegal_interstitial_ads": false,
+          "is_legal_interstitial_ads": true,
+          "is_illegal_banner_ads": false,
+          "is_legal_banner_ads": true
         },
         "custom_ads": {
           "ads_title": "Title",
@@ -68,7 +84,11 @@
           "is_banner_ads": true,
           "is_interstitial_ads": true,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 5
+          "visibility_percentage": 5,
+          "is_illegal_interstitial_ads": false,
+          "is_legal_interstitial_ads": true,
+          "is_illegal_banner_ads": false,
+          "is_legal_banner_ads": true
         }
       },
       "App_Update_Information":
