--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -15,11 +15,11 @@
           "banner_ad_unit_id_android": "353151288785830_353151742119118",
           "interstitial_ad_unit_id_ios": "353151288785830_353152322119060",
           "interstitial_ad_unit_id_android": "353151288785830_353152322119060",
-          "is_ads": true,
-          "is_banner_ads": true,
-          "is_interstitial_ads": true,
+          "is_ads": false,
+          "is_banner_ads": false,
+          "is_interstitial_ads": false,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 10,
+          "visibility_percentage": 0,
           "is_illegal_interstitial_ads": false,
           "is_legal_interstitial_ads": true,
           "is_illegal_banner_ads": false,
@@ -36,7 +36,7 @@
           "is_banner_ads": true,
           "is_interstitial_ads": true,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 10,
+          "visibility_percentage": 5,
           "is_illegal_interstitial_ads": false,
           "is_legal_interstitial_ads": true,
           "is_illegal_banner_ads": false,
@@ -45,11 +45,11 @@
         "startapp_ads": {
           "ads_app_id_ios": "201571398",
           "ads_app_id_android": "211764508",
-          "is_ads": true,
-          "is_banner_ads": true,
-          "is_interstitial_ads": true,
+          "is_ads": false,
+          "is_banner_ads": false,
+          "is_interstitial_ads": false,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 5,
+          "visibility_percentage": 0,
           "is_illegal_interstitial_ads": false,
           "is_legal_interstitial_ads": true,
           "is_illegal_banner_ads": false,
