--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -32,11 +32,11 @@
           "banner_ad_unit_id_android": "ca-app-pub-3940256099942544/6300978111",
           "interstitial_ad_unit_id_ios": "ca-app-pub-3940256099942544/4411468910",
           "interstitial_ad_unit_id_android": "ca-app-pub-3940256099942544/1033173712",
-          "is_ads": true,
-          "is_banner_ads": true,
-          "is_interstitial_ads": true,
+          "is_ads": false,
+          "is_banner_ads": false,
+          "is_interstitial_ads": false,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 5,
+          "visibility_percentage": 0,
           "is_illegal_interstitial_ads": false,
           "is_legal_interstitial_ads": true,
           "is_illegal_banner_ads": false,
