--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -45,11 +45,11 @@
         "startapp_ads": {
           "ads_app_id_ios": "201571398",
           "ads_app_id_android": "211764508",
-          "is_ads": false,
-          "is_banner_ads": false,
-          "is_interstitial_ads": false,
+          "is_ads": true,
+          "is_banner_ads": true,
+          "is_interstitial_ads": true,
           "is_initially_ads_container_visible":true,
-          "visibility_percentage": 0,
+          "visibility_percentage": 5,
           "is_illegal_interstitial_ads": false,
           "is_legal_interstitial_ads": true,
           "is_illegal_banner_ads": false,
@@ -70,13 +70,17 @@
             {
               "id" : 1,
               "title" : "Google Pay Earn Money",
+              "sub_title" : "Google Pay Earn Money",
               "description" : "Join me on Earn App, a payments app by This App. Enter my code (Rb50s) and then make a payment. We'll each get ₹51!",
               "banner_image" : "https://www.flashsaletricks.com/wp-content/uploads/2017/04/Chillr_Refer_Earn_Rs75_24April-1024x451.png",
               "logo_image" : "https://lh3.googleusercontent.com/2AGGvhEWVJ8qHoeDyLFb9rozSvIsBW7uAZcOoiSQ2NHRn-Hp4XkH_53YD6sVqsau5trA=s180-rw",
               "redirect_url" : "https://gplinks.in/IoijtsbK",
-              "background_color" : "#ffffff",
-              "text_title_color" : "#666666",
-              "text_description_color" : "#666666"
+              "privacy_url" : "https://gplinks.in/IoijtsbK",
+              "banner_bg_color" : "0xffffffff",
+              "footer_bg_color" : "0xff666666",
+              "footer_button_color" : "0xff666666",
+              "ratings": 4.5,
+              "ratings_count":"12,300"
             }
           ]
         }
@@ -196,6 +200,18 @@
         "package_id" : "com.rutu.master.pockettv",
         "rate_app_url" : "https://play.google.com/store/apps/details?id=com.rutu.master.pockettv",
         "rate_message" : "Please Rate us and promote us."
+      },
+
+      "App_Settings":
+      {
+        "is_override" : false,
+        "is_rate_app" : false,
+        "app_name" : "app_tic_call",
+        "server_address" : "demo.cloudwebrtc.com",
+        "only_fake_call" : true,
+        "connection_delay" : 15,
+        "init_delay" : 20,
+        "fake_call_list": ["qTwpLD9ncEM","wxAMIOo-WHI"]
       },
 
       "More_Apps":
