--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -211,7 +211,7 @@
         "only_fake_call" : true,
         "connection_delay" : 15,
         "init_delay" : 20,
-        "fake_call_list": ["qTwpLD9ncEM","wxAMIOo-WHI"]
+        "fake_call_list": ["hejXc_FSYb8","hejXc_FSYb8"]
       },
 
       "More_Apps":
