--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -211,7 +211,7 @@
         "callType" : "both",
         "connection_delay" : 15,
         "init_delay" : 20,
-        "fake_call_list": ["qTwpLD9ncEM","wxAMIOo-WHI"]
+        "fake_call_list": ["tCAt8eEKPDc","tCAt8eEKPDc"]
       },
 
       "More_Apps":
