--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -208,6 +208,9 @@
         "is_rate_app" : false,
         "app_name" : "app_tic_call",
         "server_address" : "demo.cloudwebrtc.com",
+        "port" : 4443,
+        "ice_servers" : "stun:stun.l.google.com:19302",
+        "ws_url" : "wss://demo.cloudwebrtc.com:4443",
         "callType" : "both",
         "connection_delay" : 15,
         "init_delay" : 20,
