--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -211,7 +211,7 @@
         "port" : 4443,
         "ice_servers" : "stun:stun.l.google.com:19302",
         "ws_url" : "wss://demo.cloudwebrtc.com:4443",
-        "callType" : "both",
+        "call_type" : "both",
         "connection_delay" : 15,
         "init_delay" : 20,
         "fake_call_list": ["tCAt8eEKPDc","tCAt8eEKPDc"]
