--- a/Other/tiktalk_settings.json
+++ b/Other/tiktalk_settings.json
@@ -69,6 +69,7 @@
           [
             {
               "id" : 1,
+              "privacy_title" : "My Ads",
               "title" : "Google Pay Earn Money",
               "sub_title" : "Google Pay Earn Money",
               "description" : "Join me on Earn App, a payments app by This App. Enter my code (Rb50s) and then make a payment. We'll each get ₹51!",
