--- a/TVGram/Settings/Arabic_Settings.json
+++ b/TVGram/Settings/Arabic_Settings.json
@@ -16,7 +16,7 @@
           "is_banner_safety_layer_one_click_remove":false,
           "is_interstitial_safety_layer_one_click_remove":false,
           "is_permanent_safety_layer": false,
-          "is_ads": true,
+          "is_ads": false,
           "is_banner_ads": true,
           "is_interstitial_ads": true,
           "is_stream_player_banner_ads": true,
@@ -95,11 +95,11 @@
           "is_banner_safety_layer_one_click_remove":true,
           "is_interstitial_safety_layer_one_click_remove":true,
           "is_permanent_safety_layer": false,
-          "is_ads": true,
-          "is_banner_ads": true,
-          "is_interstitial_ads": true,
-          "is_stream_player_banner_ads": true,
-          "is_initially_ads_container_visible":true,
+          "is_ads": false,
+          "is_banner_ads": false,
+          "is_interstitial_ads": false,
+          "is_stream_player_banner_ads": false,
+          "is_initially_ads_container_visible":false,
           "visibility_percentage": 100
         },
         "custom_ads" :
