--- a/TVGram/Settings/Arabic_Settings.json
+++ b/TVGram/Settings/Arabic_Settings.json
@@ -344,7 +344,8 @@
         "purchase_package_id" : "com.purchase.core",
         "purchase_package_id1" : "com.myjloo.indialivetv",
         "download_url_all" : "https://github.com/theantiqa/Pocket-TV/raw/Final-Apps/TVGram/Common/All%20In%20One%20Purchase.apk",
-        "download_url" : "https://github.com/theantiqa/Pocket-TV/raw/Final-Apps/TVGram/Common/Purchase%20Core.apk",
+        "download_url_core" : "https://github.com/theantiqa/Pocket-TV/raw/Final-Apps/TVGram/Common/Purchase%20Core.apk",
+        "download_url" : "",
         "filename" : "Purchase_Core.apk",
         "purchase_title": "Purchase Core",
         "purchase_message": "If you want to purchase then you have to install Purchase App.\nand then try again to purchase from here once again.",
